# osmg

./: .eslintrc.js  .gitignore  .mailmap  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  debug.sh  env  highScore  index.html  jsconfig.json  justfile  logging.yaml  nginx.conf  package.json  pyproject.toml  rollup.config.js  run_game.sh  tailwind.config.js  tickets.rst  tox.ini  vite.config.js
back/: back-start  setup.py
back/back/: api.py  games.py  globalHandlers.py  index.py  models.py  routes.py  sessionmanager.py  staticfiles.py  stream.py  utils.py
back/back.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
components/: atakks-grid.vue  avatar-card.vue  build  debug-session.vue  dice.vue  dicearray.vue  package.json  player-list.vue
components/src/: atakks-grid.vue  avatar-card.vue  debug-session.vue  dice.vue  dicearray.vue  player-list.vue
front/: atakks.html  avatars.js  avatars.xml  debug.html  dice.html  endgame.html  game_atakks.html  game_marathon.html  index.html  jeudedes.html  join.html  lobby.html  marathon.html  saloon.html  styles.css
front/js/: dice.js  endgame.js  home.js  join.js  lobby.js  locales.js  lounge.js  main.js  marathon.js  utils.js
front/jscomp/: avatar-card.umd.js  avatar.js  debug-session.umd.js  dice.umd.js  dicearray.umd.js  player-list.umd.js
locales/: build
locales/en/: atakks_game.json  index_of_games.json  marathon_game.json
locales/fr/: atakks_game.json  index_of_games.json  lobby.json  marathon_game.json  site.json
pystubs/aioredis/: __init__.pyi  utils.pyi
scripts/: copyCra  cuspy  dump_session  genGameList.py  install_editable  no_console_log.sh  remove_old_sessions  sessionSpy
server/: back-start  pyproject.toml  required.txt  setup.py  tox.ini
server/back/: customlogger.py  debug.py  games.py  globalHandlers.py  index.py  models.py  routes.py  sessionmanager.py  staticfiles.py  stream.py  utils.py
source_svgs/: avatarize.py  extract_source.py  genvars.py  source.html
src/: App.vue
src/assets/: avatars.js  base.css  main.css
src/components/: DiceArray.vue  QrCode.vue  SingleDice.vue  Toast.vue  ToastNotifs.vue  atakksGrid.vue  atakksPawn.vue  avatarCard.vue  playerList.vue
src/lib/: domutils.js  gamelist.js  locales.js  playercolors.js  session.js  toaster.js  (+3 more)
tests/: common.py  quickServerTest.py
tests_front/: .env  config.py  test_marathon.py
(+36 files in other folders)
