[tool.poetry]
name = "back"
version = "0.1.0"
description = "Our awesome game"
authors = ["fdev31 <fdev31@gmail.com>", "jo <jomenoube@gmail.com>"]
packages = [
    {include = "back", from = "server"}
    ]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.65"
uvicorn = {extras = ["standard"], version = ">= 0.18.2"}
aioredis = ">= 2.0.1"
hiredis = ">= 2.0.0"
aiojobs = ">= 1.0.0"
aiofiles = ">= 0.8.0"
anyio = ">= 3.6.1"
orjson = ">= 3.7.11"
websockets = ">=10.3"


[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
tox = ">= 3.25.1"
procmanager = ">=1.0.3"
selenium = ">= 4.4.0"
geckodriver-autoinstaller = ">=0.1.0"
pytest-asyncio = ">=0.19.0"
black = ">=22.6.0"
mypy = ">=0.971"
pydantic = ">=1.9.2"
redis = ">=4.3.4"
requests = ">=2.28.1"
typing_extensions = ">=4.3.0"
isort = ">0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
